# napari-event-monitor

./: README.md  monitoring.py  pyproject.toml
.github/workflows/: test_and_deploy.yml
src/napari_event_monitor/: monitor.py
src/napari_events_monitoring/: __init__.py  monitoring.py  napari.yaml
